--- a/css/estilo.css
+++ b/css/estilo.css
@@ -21,3 +21,39 @@ img.avatar{
 .imgcontainer{
     text-align: center;
 }
+ul.acorh {
+  margin: 10px auto;
+  padding: 0;
+  list-style: none;
+  width: 100%;
+  font-size: 18px;
+}
+ul.acorh li a {
+  display: block;
+  padding: 10px 10px 10px 20px;
+  border-bottom: 1px solid #000;
+  text-decoration: none;
+  box-sizing: border-box;
+}
+ul.acorh li ul {
+  max-height: 0;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  transition: .3s all ease-in;
+}
+ul.acorh li li a {
+  padding: 10px 10px 10px 40px;
+  font-size: 16px;
+  border: 0;
+  border-bottom: 1px solid #ccc;
+  box-sizing: border-box;
+}
+ul.acorc li li:last-child a {
+  border-bottom: 0;
+}
+ul.acorh li:hover ul {
+  max-height: 300px;
+  transition: .3s all ease-in;
+}
